fix: platform item padding on mobile

--- a/packages/core/src/sass/app/modules/onboarding-cfds-platform.scss
+++ b/packages/core/src/sass/app/modules/onboarding-cfds-platform.scss
@@ -133,9 +133,7 @@
         }
 
         &__text {
-            @include desktop {
-                padding-top: 0.4rem;
-            }
+            padding-top: 0.4rem;
         }
     }
 
